Fixed Moose and Moose::Role imports
#2352